# EFS

./: .gitignore  README.md
efs/: pyproject.toml
efs/src/efs/: __init__.py  aic_penalty.py  mse.py
efs/src/efs/core/: __init__.py  efs.py
efs_experiments/: pyproject.toml
efs_experiments/src/efs_experiments/models/: bagging.py  data_smearing.py
efs_experiments/src/efs_experiments/plotting/: plotting.py
efs_experiments/src/efs_experiments/simulation/: __init__.py
efs_experiments/src/efs_experiments/simulation/config/: parameter_loader.py
efs_experiments/src/efs_experiments/simulation/data/: data_generator.py
efs_experiments/src/efs_experiments/simulation/metrics/: README.md  degrees_of_freedom.py
efs_experiments/src/efs_experiments/simulation/models/: README.md  model_evaluator.py  model_factory.py
efs_experiments/src/efs_experiments/simulation/orchestration/: README.md  experiment_orchestrator.py
efs_experiments/src/efs_experiments/simulation/pipeline/: simulation_pipeline.py
scripts/: csv_combiner_runner.py  plotting_runner.py  run_simulation.py
templates/: PARAMETER_GUIDE.md  template_params.json
