[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EFS"
version = "1.2.0"
description = "Ensembled Forward Selection (EFS) algorithm implementation"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "numba>=0.59.0"
]
